Omaha #3456 - yajsw-wrapped comms manager; created a service script for comms_manager
amend: update log messages

Change-Id: If2d37f7b628b212d07238c0f094f093c6528f709